--- a/pipelines/alignment_calling/Snakefile
+++ b/pipelines/alignment_calling/Snakefile
@@ -4,25 +4,14 @@ import os
 configfile: "config/config.yaml"
 include: "rules/common.py"
 
-#RUNDATE=config['rundate']
-#SAMPLES = set(pd.read_table(config['samples'],header=0,dtype=str,delimiter=',')['Seq_ID']) #change from 'strain' as applicable
-#SAMPLES=config['samples'] #un-comment for testing with single samples
-#PATHS=set(pd.read_table(config['seq_data'],dtype=str))
-#REFERENCE=config['reference']
-#HOMEDIR=config['homedir'] #only if you want to set to something other than where this will be run from
-#SCRATCH=config['scratchdir']
-#PRIMERS=config['primers']
-#OUTDIR=config['outdir']
-
-
-#SAMPLES = set(pd.read_table(config['samples'],header=0,dtype=str,delimiter=',')['Seq_ID'])
-#SAMPLES = set(pd.read_table(config['samples'],header=0,dtype=str,delimiter=',').loc[lambda df: df['NGS_Date'] == config['rundate'], 'Seq_ID'].tolist())
 READ_SUBSAMPLES=set(config['read_subsamples'])
 
 SAMPLES = [line.strip() for line in open(config['samples'], 'r')]
 SAMPLE1 = SAMPLES[0]
 
-container: "docker://sethnr/pgcoe_bacseq:0.01"
+#container: "docker://sethnr/pgcoe_bacseq:0.01"
+
+include: "rules/align.smk"
 
 include: "rules/ivar.smk"
 
@@ -30,150 +19,22 @@ include: "rules/snippy.smk"
 
 include: "rules/mykrobe.smk"
 
+include: "rules/lineage.smk"
+
+localrules: all, cp_local_fq, poppunkFile, srstDB
+
+
 rule all:
     input:
         combinedcoverage=os.path.join(config['outdir'],config['runname'],'combinedcoverage.tsv'),
         basedepth=config['outdir']+'/'+config['runname']+'/all_depth.txt',
-        # metrics=expand(config['outdir']+'/'+config['runname']+'/'+config['runname']+'_{site}_{program}_{metric}.txt',
-        #        program=["pileup","snippy"], 
-        #        site=["primers","amplicons"],
-        #        metric=["meandp","covpc","pi"]),
-        pileupvcf=config['outdir']+'/'+config['runname']+'/pileup_all_vars.vcf.gz',
+        #pileupvcf=config['outdir']+'/'+config['runname']+'/pileup_all_vars.vcf.gz',
+        #lineages="results/poppunk/complete"
+        lineages="results/srst/complete"
+        # mykrobecombined=config['outdir']+'/mykrobe/combined.csv'
+        
         # evorha=expand(config['outdir']+'/evorha/{sample}.hapfreq',sample=SAMPLES),
-        mykrobecombined=config['outdir']+'/mykrobe/combined.csv'
         
-        # mykrobepredict=expand(config['outdir']+'/mykrobe/{sample}_mykrobe.json',sample=SAMPLES),
-        #coveragestats=expand(os.path.join(config['outdir'],'align/{sample}_coverage_sub{subsample}.tsv'),
-	    #                     sample=SAMPLES,subsample=READ_SUBSAMPLES),
-        # consensuses=expand(os.path.join(config['outdir'],'ivar/{sample}_consensus.fa'),sample=SAMPLES),
-        # ivariants=expand(os.path.join(config['outdir'],'ivar/{sample}_ivariants.tsv'),sample=SAMPLES),
-        # pileupvcf=os.path.join(config['outdir'],'pileup',"all_variants_filt.vcf.gz"),
-        # snippyvcf=config['outdir']+'/'+config['runname']+'/snippy_all_vars.vcf',
-        # snippyvcf=config['outdir']+'/snippy/core.vcf',
-        
-        
-
-rule indexref:
-    input:
-        reference=config['reference']
-    output:
-        indexedref="data/reference.fasta.amb"
-    log:
-    message: "Indexing H37Rv reference"
-    shell:
-        """
-        bwa index {input.reference}
-        """
-
-
-rule cp_local_fq:
-    input:
-        read_location=os.path.join(config['readdir'],'{sample}'),
-    output:
-        R1 = 'results/rawdata/{sample}_R1.fastq.gz',
-        R2 = 'results/rawdata/{sample}_R2.fastq.gz'
-    log:
-        log = "logs/datacopy/{sample}.log"
-    group: "cplocal"
-    resources:
-        mem_mb="2G",
-        cpus_per_task=1,
-        runtime=60
-    container: None
-    shell:"""
-        #find {input.read_location}
-
-        R1=` find {input.read_location} | grep _R1_ `
-        R2=` find {input.read_location} | grep _R2_ `
-
-        echo cp $R1 {output.R1}
-        cp $R1 {output.R1}
-        
-        echo cp $R2 {output.R2}
-        cp $R2 {output.R2}
-        
-        """
-
-rule align_to_ref:
-    input:
-        #read_location=os.path.join(config['readdir'],'{sample}'),
-        R1 = 'results/rawdata/{sample}_R1.fastq.gz',
-        R2 = 'results/rawdata/{sample}_R2.fastq.gz',
-        indexedref="data/reference.fasta.amb"
-    output:
-        aligned = os.path.join(config['outdir'],'align/{sample}_aligned.bam') # .bam file output of aligned and sorted reads
-    params:
-        ref=config['reference']
-    resources:
-        runtime=600,
-        mem_mb=lambda wc, input: max(2 * input.size_mb, 4000),
-	    cores=4,
-    log:
-        stdout="logs/bwa/{sample}_aln.out",
-        stderr="logs/bwa/{sample}_aln.err"
-    container: "docker://sethnr/pgcoe_bacseq:0.01"
-    message: "Aligning reads to H37Rv and sorting output for sample {wildcards.sample}"
-    shell:
-        """
-        echo "Aligning reads for {wildcards.sample} to {params.ref}\n"
-        echo 'bwa mem -o {output.aligned} {params.ref} {input.R1} {input.R2} \n' 
-        bwa mem -t {resources.cores} {params.ref} {input.R1} {input.R2} \
-            1> {output.aligned}  2> {log.stderr}
-        """
-
-rule primerclip:
-    input:
-        aligned = os.path.join(config['outdir'],'align/{sample}_aligned.bam'),
-        primers = config['primers']
-    output:
-        aln_trimmed= os.path.join(config['outdir'],'align/{sample}_aln_itrim.bam')
-    resources:
-            mem_mb=8000,
-            runtime=1440,
-    log:
-        stdout="logs/ivar/{sample}_trim.out",
-        stderr="logs/ivar/{sample}_trim.err"
-    message: "QC and soft-clipping primers using iVar"
-    shell:
-        """
-        ivar trim -i {input.aligned} -b {input.primers} -p {output.aln_trimmed} -e > {log.stdout} 2> {log.stderr}
-        """
-
-rule sort:
-    input:
-        aln_trimmed= os.path.join(config['outdir'],'align/{sample}_aln_itrim.bam')
-    output:
-        aln_itrim_sorted=os.path.join(config['outdir'],'align/{sample}_aln_itrim_sorted.bam')
-    resources:
-        mem_mb=16000,
-        runtime=180,
-	cores=4,
-    log:
-        stdout="logs/align/{sample}_sort.out",
-        stderr="logs/align/{sample}_sort.err"
-    message: "Sorting and indexing reads"
-    shell:
-        """
-        samtools sort {input.aln_trimmed} -@ {resources.cores} -o {output.aln_itrim_sorted} > {log.stdout} 2> {log.stderr}
-        samtools index {output.aln_itrim_sorted} >> {log.stdout} 2>> {log.stderr}
-        """
-
-rule subsample:
-    input:
-        aln_itrim_sorted= os.path.join(config['outdir'],'align/{sample}_aln_itrim_sorted.bam')
-    output:
-        subsamp=os.path.join(config['outdir'],'align/{sample}_subsamp{subsample}.bam')
-    resources:
-        mem_mb=8000,
-        runtime=180,
-    log:
-        stdout="logs/align/{sample}_sub_{subsample}.out",
-        stderr="logs/align/{sample}_sub_{subsample}.err",
-    message: "Selecting subsample of reads from {wildcards.sample}: {wildcards.subsample}"
-    shell:
-        """
-        samtools view -b -s {wildcards.subsample} {input.aln_itrim_sorted} -o {output.subsamp} 1> {log.stdout} 2> {log.stderr}
-        """
 
 rule coverage:
     input:
@@ -319,8 +180,8 @@ rule get_metrics:
         #snippyvcf=config['outdir']+'/snippy/core.vcf',
         combinedcoverage=os.path.join(config['outdir'],config['runname'],'combinedcoverage.tsv'),
         depth=config['outdir']+'/'+config['runname']+'/all_depth.txt',
-        primers='data/TBscheme.primer.bed',
-        amplicons='data/TBscheme.insert.bed',
+        primers=config['primers'],
+        amplicons=config['amplicons'],
     output:
         #expand(config['outdir']+'/'+config['runname']+'/'+config['runname']+'_{site}_{program}_{metric}.tsv',
         #       program=["pileup","snippy"], site=["primers","amplicons"],metric=["meandp","covpc","pi"]),
