--- a/pipelines/alignment_calling/config/config_TB005.yaml
+++ b/pipelines/alignment_calling/config/config_TB005.yaml
@@ -3,7 +3,8 @@ samples: '/home/snr28/project/rawdata/TB/TB005/TB005_samples.txt'
 readdir: '/home/snr28/project/rawdata/TB/TB005/'
 rundate: '2024-07-19'
 runname: 'TB005'
-reference: 'data/reference.fasta'
-primers: 'data/TBscheme.primer.bed'
-outdir: 'results' 
+reference: '../../refs/TB.reference.fa'
+primers: '../../schemes/TB.primer.bed'
+amplicons: '../../schemes/TB.insert.bed'
+outdir: 'results'
 read_subsamples: [1.0]
