--- a/pipelines/clean_human/Snakefile
+++ b/pipelines/clean_human/Snakefile
@@ -2,7 +2,6 @@ import pandas as pd
 import os
 
 configfile: "config/config.yaml"
-include: "rules/common.py"
 
 SAMPLES = [line.strip() for line in open(config['samples'], 'r')]
 
@@ -14,28 +13,19 @@ include: "rules/cplocal.smk"
 include: "rules/align.smk"
 include: "rules/stats.smk"
 
+wildcard_constraints:
+    sample="[^_]+",
+    target="[^_]+",
+    host="[^_]+"
+
 
 localrules: all, cp_local_fq
 
 
 rule all:
     input:
-        expand(os.path.join(config['outdir'],'align/{sample}_{human}_cleaned.tsv'),sample=SAMPLES,clean=HOST),
-        expand(os.path.join(config['outdir'],'align/{sample}_{target}_aligned.tsv'),sample=SAMPLES,target=TARGET)
-        
+        expand(os.path.join('results/clean/{sample}_'+HOST+'_R1.fastq.gz'),sample=SAMPLES),
+        expand(os.path.join('results/clean/{sample}_'+HOST+'_R2.fastq.gz'),sample=SAMPLES),
+        expand(os.path.join(config['outdir'],'align/{sample}_'+TARGET+'.bam'),sample=SAMPLES),
+        'results/stats/'+TARGET+'_'+HOST+'_alignstats.txt'
 
-rule catstats:
-    input:
-        flagstats = expand(os.path.join(config['outdir'],'align/{sample}_{target}_flagstats'),sample=SAMPLES,clean=[HOST,TARGET])
-    output:
-        alstats=   'results/align/alignstats.txt',
-    group: "catstats"
-    resources:
-        mem_mb=8000,
-        runtime=180,
-    log:
-        stderr="logs/depth/{target}_depths.err"
-    shell:
-        """
-        cat {input.flagstats} > {output.alstats}
-        """
