upload updated primer alignment script

--- a/supplemental/specificity_analysis/2_primer_alignment/config/TB_primer_aln_reps.yaml
+++ b/supplemental/specificity_analysis/2_primer_alignment/config/TB_primer_aln_reps.yaml
@@ -3,6 +3,9 @@ samples:
   K.pneumoniae: seqs/K.pneumoniae.fa
   M.canetti: seqs/M.canetti.fa
   M.intracellulare: seqs/M.intracellulare.fa
+  M.kansasii: seqs/M.kansasii.fa
+  M.leprae: seqs/M.leprae.fa
+  M.bovis: seqs/M.bovis.fa
   PA01: seqs/PA01.fa
   S.odontolytica: seqs/S.odontolytica.fa
   H.influenzae: seqs/H.influenzae.fa
