--- a/supplemental/specificity_analysis/3_amp_prediction/config/TB_reps.yaml
+++ b/supplemental/specificity_analysis/3_amp_prediction/config/TB_reps.yaml
@@ -1,12 +1,15 @@
 samples:
-  H.influenzae: seqs/H.influenzae.fa
   H37Rv: seqs/H37Rv.fa
   K.pneumoniae: seqs/K.pneumoniae.fa
-  M.abscessus: seqs/M.abscessus.fa
   M.canetti: seqs/M.canetti.fa
-  M.fortuitum: seqs/M.fortuitum.fa
   M.intracellulare: seqs/M.intracellulare.fa
-  OXC141: seqs/OXC141.fa
+  M.kansasii: seqs/M.kansasii.fa
+  M.leprae: seqs/M.leprae.fa
+  M.bovis: seqs/M.bovis.fa
   PA01: seqs/PA01.fa
-  S.aureus: seqs/S.aureus.fa
   S.odontolytica: seqs/S.odontolytica.fa
+  H.influenzae: seqs/H.influenzae.fa
+  M.abscessus: seqs/M.abscessus.fa
+  M.fortuitum: seqs/M.fortuitum.fa
+  OXC141: seqs/OXC141.fa
+  S.aureus: seqs/S.aureus.fa 
